@@ -1,6 +1,6 @@
 {
     "background": {
-        "scripts": ["src/background.js"],
+        "scripts": ["lib/jquery-3.3.1.min.js", "src/background.js"],
         "persistent": false
     },
     "browser_action": {
