@@ -1,3 +1,7 @@
+2019-11-01  Nik Nyby  <nnyby@columbia.edu>
+
+	* Fix CORB error when collecting YouTube videos
+
 2019-10-31  Nik Nyby  <nnyby@columbia.edu>
 
 	* Update Mediathread url to use *.ctl
